syntax = "proto3";

package rivet.backend.pkg.party.member_list;

import "proto/common.proto";

message Request {
	reserved 1;

	repeated rivet.common.Uuid party_ids = 2;
}

message Response {
	message Party {
		rivet.common.Uuid party_id = 1;
		repeated rivet.common.Uuid user_ids = 2;
	}

	repeated Party parties = 1;
}
